# coachd

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  TODOS.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  dockerhub-readme.yml  release.yml
coachd/: __init__.py  __main__.py  app.py  config.py  scheduler.py
coachd/adapters/: __init__.py  anthropic_agent.py  composite_tools.py  faster_whisper_stt.py  garmin_mcp_client.py  garmin_provider.py  telegram.py  telegram_bot.py
coachd/auth/: __init__.py  garmin_login.py
coachd/core/: __init__.py  chat.py  daily_digest.py  engine.py  i18n.py  journal.py  parsing.py  pending.py  prompts.py  recovery.py  resilience.py  session_store.py
coachd/ports/: __init__.py  datasource.py  llm.py  stt.py
coachd/prompts/: __init__.py  methodology.md
coachd/security/: __init__.py  authenticator.py  write_guard.py
deploy/: dockerhub-overview.md  portainer-stack.yml
tests/: test_anthropic_agent.py  test_app.py  test_authenticator.py  test_chat.py  test_chat_id.py  test_composite_tools.py  test_config.py  test_daily_digest.py  test_engine.py  test_garmin_login.py  test_garmin_mcp_client.py  test_garmin_provider.py  test_i18n.py  test_journal.py  test_no_cyrillic_source.py  test_parsing.py  test_pending.py  test_prompts.py  test_recovery.py  test_resilience.py  test_scheduler.py  test_session_store.py  test_stt.py  test_stt_decode_smoke.py  test_telegram.py  test_telegram_bot.py  test_write_guard.py
tests/fixtures/: voice.oga
